# Esp32DjConsole

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ROADMAP.md  build.sh  partitions.csv  partitions_p4.csv  sdkconfig.defaults  sdkconfig.defaults.esp32p4
.claude/: settings.json
.claude/skills/add-cat-command/: SKILL.md
.claude/skills/build-flash/: SKILL.md
docs/: thetis-cat-protocol.md
docs/plans/: 2026-03-04-esp32p4-midi-bridge-design.md  2026-03-04-esp32p4-midi-bridge-plan.md  2026-03-06-value-mangling-design.md  2026-03-06-value-mangling-plan.md  2026-03-08-midi-input-drain-design.md  2026-03-08-midi-input-drain.md
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.svelte
frontend/src/lib/: CatTicker.svelte  ConfirmDialog.svelte  Toast.svelte  api.js  stores.js  toast.js  ws.js
frontend/src/pages/: Config.svelte  Dashboard.svelte  Debug.svelte  Leds.svelte  Mappings.svelte
main/: CMakeLists.txt  cat_client.c  cat_client.h  cmd_db_generated.inc  config_store.c  config_store.h  dj_led.c  dj_led.h  http_server.c  http_server.h  idf_component.yml  main.c  mapping_engine.c  mapping_engine.h  status_led.c  status_led.h  tci_client.c  tci_client.h  usb_debug.c  usb_debug.h  usb_dj_host.c  usb_dj_host.h  wifi_manager.c  wifi_manager.h
reference/: cmd_overrides.json
scripts/: extract_cat_commands.py
src/: CMakeLists.txt  config_store.h  event_engine.c  event_engine.h  http_server.c  http_server.h  main.c  midi_input.c  midi_input.h  midi_output.c  midi_output.h  tusb_config.h  usb_descriptors.c  usb_dj_host.c  usb_dj_host.h  wifi_manager.c  wifi_manager.h
