idf_component_register(
    SRCS
        "main.c"
        "wifi_manager.c"
        "status_led.c"
        "usb_dj_host.c"
        "usb_debug.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        nvs_flash
        esp_wifi
        esp_netif
        esp_event
        mdns
        usb
        esp_http_server
        json
        led_strip
)
